--- a/tsconfig_synth_only.json
+++ b/tsconfig_synth_only.json
@@ -2,7 +2,7 @@
 	"files": [ "synth/synth.ts" ],
 	"compilerOptions": {
 		"outFile": "website/beepbox_synth.js",
-		
+
 		"target": "es6",
 		"sourceMap": true,
 		"removeComments": true,
@@ -14,8 +14,12 @@
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
 		"noUnusedLocals": true,
-		
+
 		"strict": false,
 		"strictPropertyInitialization": false
+	},
+	"typedocOptions": {
+		"mode": "modules",
+		"out": "docs"
 	}
 }
