set version number to match release update doc options

--- a/tsconfig_synth_only.json
+++ b/tsconfig_synth_only.json
@@ -20,6 +20,9 @@
 	},
 	"typedocOptions": {
 		"mode": "modules",
-		"out": "docs"
+		"out": "docs",
+		"excludePrivate": true,
+		"stripInternal": true,
+		"includeVersion": true
 	}
 }
